fix(icons): icons not hidden despite use of visibility: hidden

--- a/packages/elvis/src/components/button/icon.scss
+++ b/packages/elvis/src/components/button/icon.scss
@@ -16,7 +16,7 @@
     @include icons.icon-size('sm');
 
     i {
-      visibility: visible;
+      visibility: unset;
 
       @include icons.icon-currentcolor();
     }
@@ -120,7 +120,7 @@
     }
 
     .e-btn__icon i[class*='filled-color'] {
-      visibility: visible; // Showing hover icon
+      visibility: unset; // Showing hover icon
     }
   }
 }
